deployment/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: apple-service
spec:
  selector:
    app: rest-k8s
  ports:
    - port: 80
